# ChangeLog for kde-base/kdesu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesu/ChangeLog,v 1.120 2009/07/12 09:39:20 armin76 Exp $

  12 Jul 2009; Raúl Porcel <armin76@gentoo.org> kdesu-3.5.10.ebuild:
  alpha/ia64/sparc stable wrt #271889

  08 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org> kdesu-3.5.10.ebuild:
  Add ~mips keywords

  18 Jun 2009; Jeroen Roovers <jer@gentoo.org> kdesu-3.5.10.ebuild:
  Stable for HPPA (bug #271889).

  14 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> -kdesu-4.2.3.ebuild:
  Drop KDE 4.2.3

  06 Jun 2009; Markus Meier <maekke@gentoo.org> kdesu-3.5.10.ebuild:
  amd64/x86 stable, bug #271889

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> kdesu-4.2.4.ebuild:
  Fix accidently added keywords

*kdesu-4.2.4 (04 Jun 2009)

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> +kdesu-4.2.4.ebuild:
  Version bump

  03 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> -kdesu-4.2.2.ebuild:
  Drop KDE 4.2.2

  03 Jun 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking kdesu-3.5.10 ppc64 stable for bug 271889

  31 May 2009; nixnut <nixnut@gentoo.org> kdesu-3.5.10.ebuild:
  ppc stable #271889

*kdesu-4.2.3 (06 May 2009)

  06 May 2009; Tomas Chvatal <scarabeus@gentoo.org> +kdesu-4.2.3.ebuild:
  Version bump

  17 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org> kdesu-4.2.2:
  Restore ~hppa keywords

  16 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org> -kdesu-4.2.1.ebuild:
  Drop KDE 4.2.1

*kdesu-4.2.2 (11 Apr 2009)

  11 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org> +kdesu-4.2.2.ebuild:
  Add KDE 4.2.2

  11 Apr 2009; Raúl Porcel <armin76@gentoo.org> kdesu-4.2.1.ebuild:
  Add ~alpha/~ia64 wrt #260777

  11 Apr 2009; Jeroen Roovers <jer@gentoo.org> kdesu-4.2.1.ebuild:
  Marked ~hppa (bug #260777).

  08 Mar 2009; Alexey Shvetsov <alexxy@gentoo.org> -kdesu-4.2.0.ebuild:
  Drop KDE 4.2.0

*kdesu-4.2.1 (04 Mar 2009)
